fixing wrong position help-popup

--- a/minotoring/front/src/sass/base-elements/Table.scss
+++ b/minotoring/front/src/sass/base-elements/Table.scss
@@ -46,7 +46,7 @@ table.table {
             padding: 10px 15px;
             z-index: 1;
             width: 240px;
-            left: -75px;
+            right: 15px;
             top: 100%;
             text-align: justify;
             white-space: normal;
